<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rlPhotoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/custom_photo_header_color"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="3dip"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tvPostedTime"
            android:layout_toRightOf="@+id/ivProfilePic"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="3dip"
            android:text="@string/username_default_text"
            android:textColor="@color/custom_username_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:layout_toRightOf="@+id/ivProfilePic"
            android:gravity="center_vertical"
            android:paddingTop="3dip" />

        <TextView
            android:id="@+id/tvPostedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvUserName"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/ic_action_time"
            android:gravity="center_vertical"
            android:padding="5dip" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rlPhotoHeader"
        android:adjustViewBounds="true"
        android:contentDescription="@string/popular_photo_content_description"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/rlPhotoDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivPhoto"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="5dip"
            android:text="@string/caption_default_text" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvCaption"
            android:drawableLeft="@drawable/ic_likes"
            android:gravity="center_vertical"
            android:padding="5dip"
            android:text="@string/likes_default_text" />

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvLikes"
            android:lineSpacingExtra="5dip"
            android:padding="5dip"
            android:text="@string/comments_default_text" />
    </RelativeLayout>

</RelativeLayout>